<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Add Expense shortcut -->
    <shortcut
        android:shortcutId="shortcut_add_expense"
        android:enabled="true"
        android:icon="@drawable/expense"
        android:shortcutShortLabel="@string/shortcut_expense_short"
        android:shortcutLongLabel="@string/shortcut_expense_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hussain.walletflow"
            android:targetClass="com.hussain.walletflow.shortcut.ShortcutActivity">
            <extra
                android:name="shortcut_transaction_type"
                android:value="EXPENSE" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Add Income shortcut -->
    <shortcut
        android:shortcutId="shortcut_add_income"
        android:enabled="true"
        android:icon="@drawable/income"
        android:shortcutShortLabel="@string/shortcut_income_short"
        android:shortcutLongLabel="@string/shortcut_income_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.hussain.walletflow"
            android:targetClass="com.hussain.walletflow.shortcut.ShortcutActivity">
            <extra
                android:name="shortcut_transaction_type"
                android:value="INCOME" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
